# ash-rtx-renderer

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: closest_hit.glsl  miss.glsl  raygen.glsl  simple_cuda.cu  triangle.frag  triangle.vert
src/: acceleration_structure.rs  device_mesh.rs  draw_impls.rs  main.rs  mesh.rs  renderers.rs  shader.rs  uniforms.rs  vulkan_app.rs
src/renderers/: color_sine.rs  cuda.rs  mod.rs  ortho.rs  raster.rs  ray_tracing.rs
