[package]
name = "ash-rtx-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]
license = "MIT"
readme = "README.md"
keywords = ["vulkan", "ash", "RTX"]
categories = ["graphics"]
repository = "https://github.com/theHamsta/ash-rtx-renderer"


[dependencies]
anyhow = "1.0"
clap = { version = "3.0.5", features = ["derive"] }
ash = { git = "https://github.com/Ralith/ash", branch = "swapchain"}
#https://github.com/MaikKlein/ash/pull/506
ash-swapchain = {git = "https://github.com/Ralith/ash", branch = "swapchain" }
ash-window = { git = "https://github.com/Ralith/ash", branch = "swapchain" }
raw-window-handle = "0.4"
winit = "0.26.1"
ply-rs = "0.1.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
thiserror = "1.0.30"
# Nice additions
#gpu-allocator = "0.15.0"
#meshopt = "0.1.9"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.2"
