[package]
name = "ash-rtx-renderer"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]
license = "MIT"
readme = "README.md"
keywords = ["vulkan", "ash", "RTX"]
categories = ["graphics"]
repository = "https://github.com/theHamsta/ash-rtx-renderer"


[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
ash = { git = "https://github.com/theHamsta/ash", branch = "swapchain"}
#https://github.com/MaikKlein/ash/pull/506
ash-swapchain = {git = "https://github.com/theHamsta/ash", branch = "swapchain" }
ash-window = { git = "https://github.com/theHamsta/ash", branch = "swapchain" }
raw-window-handle = "0.4.3"
winit = "0.26.1"
ply-rs = "0.1.3"
log = "0.4.16"
pretty_env_logger = "0.4.0"
thiserror = "1.0.31"
enum_dispatch = "0.3.8"
cgmath = "0.18"
#bytemuck = {version="1.9", features = ["derive"]}
spirv-reflect = { git = "https://github.com/theHamsta/spirv-reflect-rs.git" }
#egui-winit-ash-integration = { path = "../egui-winit-ash-integration" }
tri-mesh="0.5.0"

tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11" }
tracing-tracy = { version = "0.9" }
tracy-client = { version = "0.13.2" }

#rspirv-reflect = "0.7"
# Nice additions
#gpu-allocator = "0.16.0"
#meshopt = "0.1.9"
[build-dependencies]
anyhow = "1.0"
glob = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.2.0"
